--- a/index.html
+++ b/index.html
@@ -24,119 +24,50 @@
         sqrt
       } = Homework;
 
-      const a = new AsyncArray([1, 2, 3]);
+      const a = new AsyncArray(
+        Array.from({ length: Math.floor(Math.random() * 20) }, () =>
+          Math.floor(Math.random() * 40)
+        )
+      );
+      a.print(console.log('Input: '));
 
-      // console.log('добавление элемента');
-      // a.push(4, () => {
-      //   console.log('добавление элемента выполнено');
-      //   a.print();
-      // });
-      // a.print();
-
-      // console.log('получение длины массива sync');
-      // a.length(result => {
-      //   console.log('получение длины массива выполнено cb');
-      //   console.log('результат', result);
-      //   a.print();
-      // });
-      // a.print();
-      // let results = [];
-      //     let i;
-      //     for (i = 0; i < resolve; i = i + 1) {
-      //       console.log(i, 'not inside', resolve);
-      //       if (callback.call(await thisArg, await arr[i], await i, await arr)) {
-      //         console.log(i, 'inside');
-      //         arr
-      //           .get(i)
-      //           .then(
-      //             resolve => results.push(resolve),
-      //             reject => console.log
-      //           )
-      //           .catch(e => console.error(e));
-      //       }
-      //     }
-      //     return results;
-      //   });
-
-      function filter(arr, callback, thisArg) {
-        let len = new Promise(resolve => arr.length(resolve));
-        len
-          .then(resolve => console.log(resolve, 'length'))
-          .then(() => {
-            let lastItem = new Promise(resolve => arr.pop(resolve));
-            return lastItem;
-          })
-          .then(resolve => console.log(callback(resolve), 'for', resolve))
-          .then(() => {
-            let lastItem = new Promise(resolve => arr.pop(resolve));
-            return lastItem;
-          })
-          .then(resolve => console.log(callback(resolve), 'for', resolve))
-          .then(() => {
-            let lastItem = new Promise(resolve => arr.pop(resolve));
-            return lastItem;
-          })
-          .then(resolve => console.log(callback(resolve), 'for', resolve))
-          .then(() => {
-            let lastItem = new Promise(resolve => arr.pop(resolve));
-            return lastItem;
-          })
-          .catch(e => console.warn(e, 'error'));
+      async function filter(arr, fn, cb) {
+        const lengthPromise = array =>
+          new Promise(resolve => array.length(result => resolve(result)));
+        const lessPromise = (first, second) =>
+          new Promise(resolve =>
+            less(first, second, result => resolve(result))
+          );
+        const getPromise = (array, i) =>
+          new Promise(resolve => array.get(i, result => resolve(result)));
+        const addPromise = (a, b) =>
+          new Promise(resolve => add(a, b, result => resolve(result)));
+        const subtractPromise = (a, b) =>
+          new Promise(resolve => subtract(a, b, result => resolve(result)));
+        const pushPromise = (array, el) =>
+          new Promise(resolve => array.push(el));
+        let len = await lengthPromise(arr).then(resolve =>
+          addPromise(resolve, 1)
+        );
+        let filteredArray = [];
+        let i = 0;
+        while ((len = await subtractPromise(len, 1))) {
+          await getPromise(arr, i)
+            .then(resolve => {
+              if (fn(resolve, i, arr)) {
+                pushPromise(filteredArray, resolve);
+              }
+            })
+            .catch(e => console.warn(e, 'error'));
+          i = await addPromise(i, 1);
+        }
+        return filteredArray;
       }
 
-      filter(a, el => el === 2);
-
-      // console.log('присваивание элемента по индексу');
-      // a.set(2, 999, () => {
-      //   console.log('присваивание элемента по индексу выполнено');
-      //   a.print();
-      // });
-      // a.print();
-
-      // console.log('получение элемента по индексу');
-      // a.get(0, result => {
-      //   console.log('получение элемента по индексу выполнено');
-      //   console.log('результат', result);
-      //   a.print();
-      // });
-      // a.print();
-
-      // console.log('получение последнего элемента');
-      // a.pop(result => {
-      //   console.log('получение последнего элемента выполнено');
-      //   console.log('результат', result);
-      //   a.print();
-      // });
-      // a.print();
-
-      // console.log('сложение: 5 + 2');
-      // add(5, 2, result => console.log('результат сложения', result));
-
-      // console.log('вычитание: 11 - 7');
-      // subtract(11, 7, result => console.log('результат вычитания', result));
-
-      // console.log('умножение: 6 * 7');
-      // multiply(6, 7, result => console.log('результат умножения', result));
-
-      // console.log('деление: 13 / 7');
-      // divide(13, 7, result => console.log('результат деления', result));
-
-      // console.log('остаток от деления: 17 % 7');
-      // mod(17, 7, result => console.log('получен остаток от деления', result));
-
-      // console.log('квадратный корень из 16');
-      // sqrt(16, result => console.log('квадратный корень', result));
-
-      // console.log('операция МЕНЬШЕ: 5 < 3');
-      // less(5, 3, result => console.log('результат операции МЕНЬШЕ', result));
-
-      // console.log('операция РАВНО: 1 == 1');
-      // equal(1, 1, result => console.log('результат операции РАВНО', result));
-
-      // console.log('операция МЕНЬШЕ ИЛИ РАВНО: 12 <= 19');
-      // lessOrEqual(12, 19, result =>
-      //   console.log('результат операции МЕНЬШЕ ИЛИ РАВНО', result)
-      // );
+      filter(a, (el, index, src) => el > 10 && index >= 2).then(resolve => {
+        console.log('Output:');
+        console.log(resolve.toString());
+      });
     </script>
   </body>
 </html>
