--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    Посмотрите код страницы и вывод в консоль браузера.
+    Добавил немного рандома, чтобы тестить было приятней :)
 
     <script src="shri-async-hw.js"></script>
 
@@ -29,7 +29,7 @@
           Math.floor(Math.random() * 40)
         )
       );
-      a.print(console.log('Input: '));
+      a.print(console.log('Input:'));
 
       async function filter(arr, fn, cb) {
         const lengthPromise = array =>
@@ -64,9 +64,11 @@
         return filteredArray;
       }
 
-      filter(a, (el, index, src) => el > 10 && index >= 2).then(resolve => {
+      filter(a, (el, index, src) => el >= 5 && index > 2).then(resolve => {
         console.log('Output:');
-        console.log(resolve.toString());
+        console.log(
+          resolve.length ? resolve.toString() : 'No matching elements'
+        );
       });
     </script>
   </body>
